--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentación de Imágenes</title>
+    <title>NIGTHMARE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,45 +19,16 @@
     <div class="slide active" id="slide1">
         <img src="imagen/4.png" alt="Imagen 4">
     </div>
-    <div class="slide" id="slide2">
-        <img src="imagen/5.png" alt="Imagen 5">
-    </div>
-    <div class="slide" id="slide3">
-        <img src="imagen/6.png" alt="Imagen 6">
-    </div>
-    <div class="slide" id="slide2">
-        <img src="imagen/7.png" alt="Imagen 7">
-    </div>
-    <div class="slide" id="slide3">
-        <img src="imagen/8.png" alt="Imagen 8">
-    </div>
-    <div class="slide active" id="slide1">
-        <img src="imagen/9.png" alt="Imagen 9">
-    </div>
-    <div class="slide" id="slide2">
-        <img src="imagen/10.png" alt="Imagen 10">
-    </div>
-    <div class="slide" id="slide3">
-        <img src="imagen/11.png" alt="Imagen 11">
-    </div>
-    <div class="slide" id="slide3">
-        <img src="imagen/12.png" alt="Imagen 12">
-    </div>
-    <div class="slide" id="slide2">
-        <img src="imagen/13.png" alt="Imagen 13">
-    </div>
-    <div class="slide" id="slide3">
-        <img src="imagen/14.png" alt="Imagen 14">
-    </div>
-    <div class="slide active" id="slide1">
-        <img src="imagen/15.png" alt="Imagen 15">
-    </div>
-    <div class="slide" id="slide2">
-        <img src="imagen/16.png" alt="Imagen 16">
-    </div>
-    <div class="slide" id="slide3">
-        <img src="imagen/17.png" alt="Imagen 17">
-    </div>
+    <div class="slide" id="slide5">cd
+        <div class="video-container">
+          <video id="myVideo" src="imagen/IDGS 10°a.mp4" loop>
+            Tu navegador no soporta el video.
+          </video>
+        </div>
+      </div>
+      
+      
+   
       <!-- Botones de navegación -->
       <button class="nav-button prev" onclick="prevSlide()">&#10094; Anterior</button>
       <button class="nav-button next" onclick="nextSlide()">Siguiente &#10095;</button>
