--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="imagen/1.png" alt="Imagen 1">
     </div>
     <div class="slide" id="slide2">
-        <img src="imagen/2.png" alt="Imagen 2">
+        <img src="imagen/2_1.png" alt="Imagen 2">
     </div>
     <div class="slide" id="slide3">
         <img src="imagen/3.png" alt="Imagen 3">
